--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     
     <!-- Formats -->
     <string name="fmt_post_number">No. %1$d %2$s</string>
+    <string name="title_reply_webview">回覆</string>
+    <string name="msg_reply_webview_missing_url">回覆網址無效</string>
 </resources>
